--- a/_posts/WPC/2017-02-13-EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
+++ b/_posts/WPC/2017-02-13-EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61-results.html
@@ -3,10 +3,10 @@ title: EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html
 tags: data
 layout: ci_results
-date: '2017-02-13 07:14:37'
+date: '2017-02-13 07:18:36'
 unhandled_failure: false
 build_error_count: 0
-build_warning_count: 0
+build_warning_count: 1
 package_error_count: 0
 package_warning_count: 0
 test_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-cppcheck-1.61
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 185.337825352
 test_time: 
 package_time: 
 install_time: 
@@ -57,7 +57,13 @@ performance_test_count: 0
 ---
 {
   "build_results": [
-
+    {
+      "filename": "src/EnergyPlus/AirflowNetworkBalanceManager.cc",
+      "linenumber": "8220",
+      "colnumber": 0,
+      "messagetype": "warning",
+      "message": "Member variable 'AFNExtSurfacesProp::CPVNum' is not initialized in the constructor."
+    }
   ],
   "test_results": [
 
@@ -71,10 +77,10 @@ performance_test_count: 0
     "permalink": "EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-cppcheck-1.61.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-13 07:14:37",
+    "date": "2017-02-13 07:18:36",
     "unhandled_failure": false,
     "build_error_count": 0,
-    "build_warning_count": 0,
+    "build_warning_count": 1,
     "package_error_count": 0,
     "package_warning_count": 0,
     "test_count": 0,
@@ -97,9 +103,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-cppcheck-1.61",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 185.337825352,
     "test_time": null,
     "package_time": null,
     "install_time": null,
