--- a/_posts/WPC/2017-02-13-EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
+++ b/_posts/WPC/2017-02-13-EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-custom_check-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-custom_check.html
 tags: data
 layout: ci_results
-date: '2017-02-13 08:36:08'
+date: '2017-02-13 08:37:06'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-14.04-custom_check
-pending: true
+pending: false
 analyze_only: true
-build_time: 
-test_time: 
+build_time: 1.123764926
+test_time: 1.015476634
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -71,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-5aad04eb63d90280b2e9390d5c701774db4d79f6-x86_64-Linux-Ubuntu-14.04-custom_check.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2017-02-13 08:36:08",
+    "date": "2017-02-13 08:37:06",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -97,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-14.04-custom_check",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 1.123764926,
+    "test_time": 1.015476634,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
