--- a/_posts/WT/2020-07-19-EnergyPlus-d5b518c20ba1e8c794fa7d2c97275643ad16d1d9-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/WT/2020-07-19-EnergyPlus-d5b518c20ba1e8c794fa7d2c97275643ad16d1d9-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-d5b518c20ba1e8c794fa7d2c97275643ad16d1d9-PR8141-x86_64-Linux-U
 permalink: EnergyPlus-d5b518c20ba1e8c794fa7d2c97275643ad16d1d9-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-07-19 23:49:07'
+date: '2020-07-19 23:56:20'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '8141'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 425.458548206
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-d5b518c20ba1e8c794fa7d2c97275643ad16d1d9-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-19 23:49:07",
+    "date": "2020-07-19 23:56:20",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 425.458548206,
     "test_time": null,
     "package_time": null,
     "install_time": null,
