--- a/_posts/develop/2020-07-20-EnergyPlus-f28f54ee107f0da6835e40389e3a6729145df437-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/develop/2020-07-20-EnergyPlus-f28f54ee107f0da6835e40389e3a6729145df437-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-f28f54ee107f0da6835e40389e3a6729145df437-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-f28f54ee107f0da6835e40389e3a6729145df437-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-07-20 17:43:45'
+date: '2020-07-20 17:50:42'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 411.952899607
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-f28f54ee107f0da6835e40389e3a6729145df437-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-20 17:43:45",
+    "date": "2020-07-20 17:50:42",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 411.952899607,
     "test_time": null,
     "package_time": null,
     "install_time": null,
