--- a/_posts/173708472-I-8124/2020-07-21-EnergyPlus-5620f51acb7482bf7a1de1803cb0471ce7ce331d-x86_64-MacOS-10.15-clang-11.0.0-results.html
+++ b/_posts/173708472-I-8124/2020-07-21-EnergyPlus-5620f51acb7482bf7a1de1803cb0471ce7ce331d-x86_64-MacOS-10.15-clang-11.0.0-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-5620f51acb7482bf7a1de1803cb0471ce7ce331d-x86_64-MacOS-10.15-cl
 permalink: EnergyPlus-5620f51acb7482bf7a1de1803cb0471ce7ce331d-x86_64-MacOS-10.15-clang-11.0.0.html
 tags: data
 layout: ci_results
-date: '2020-07-21 20:34:57'
+date: '2020-07-21 20:55:26'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-MacOS-10.15-clang-11.0.0
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 2.586332
+test_time: 1.014513
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-5620f51acb7482bf7a1de1803cb0471ce7ce331d-x86_64-MacOS-10.15-clang-11.0.0.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-21 20:34:57",
+    "date": "2020-07-21 20:55:26",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,10 +95,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-MacOS-10.15-clang-11.0.0",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 2.586332,
+    "test_time": 1.014513,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
