--- a/_posts/develop/2020-07-22-EnergyPlus-175ff74af9af23f110d33ecece2dc8a429be1b21-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/develop/2020-07-22-EnergyPlus-175ff74af9af23f110d33ecece2dc8a429be1b21-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-175ff74af9af23f110d33ecece2dc8a429be1b21-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-175ff74af9af23f110d33ecece2dc8a429be1b21-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-07-22 13:41:45'
+date: '2020-07-22 13:48:48'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 415.613197073
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-175ff74af9af23f110d33ecece2dc8a429be1b21-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-22 13:41:45",
+    "date": "2020-07-22 13:48:48",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 415.613197073,
     "test_time": null,
     "package_time": null,
     "install_time": null,
