--- a/_posts/173784423-I-8146/2020-07-23-EnergyPlus-8e614b375abf4b1a3f511d88cd6d72dadd44d29d-x86_64-Linux-Ubuntu-18.04-gcc-7.5-UnitTestsCoverage-Debug-results.html
+++ b/_posts/173784423-I-8146/2020-07-23-EnergyPlus-8e614b375abf4b1a3f511d88cd6d72dadd44d29d-x86_64-Linux-Ubuntu-18.04-gcc-7.5-UnitTestsCoverage-Debug-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-8e614b375abf4b1a3f511d88cd6d72dadd44d29d-x86_64-Linux-Ubuntu-1
 permalink: EnergyPlus-8e614b375abf4b1a3f511d88cd6d72dadd44d29d-x86_64-Linux-Ubuntu-18.04-gcc-7.5-UnitTestsCoverage-Debug.html
 tags: data
 layout: ci_results
-date: '2020-07-23 01:06:59'
+date: '2020-07-23 01:07:09'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,10 +29,10 @@ pull_request_issue_id: ''
 pull_request_base_repository: ''
 pull_request_base_ref: ''
 device_id: x86_64-Linux-Ubuntu-18.04-gcc-7.5-UnitTestsCoverage-Debug
-pending: true
+pending: false
 analyze_only: false
-build_time: 
-test_time: 
+build_time: 2.975903381
+test_time: 1.0024053
 package_time: 
 install_time: 
 results_repository: NREL/EnergyPlusBuildResults
@@ -47,7 +47,9 @@ coverage_lines: 0
 coverage_total_lines: 0
 coverage_functions: 0
 coverage_total_functions: 0
-coverage_url: 
+coverage_url: 'http://energyplus.s3-website-us-east-1.amazonaws.com/coverage/2020-07-22-EnergyPlus-8e614b375a-x86_64-gcc-7.5UTCD
+
+'
 asset_url: 
 performance_total_time: 
 performance_test_count: 0
@@ -69,7 +71,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-8e614b375abf4b1a3f511d88cd6d72dadd44d29d-x86_64-Linux-Ubuntu-18.04-gcc-7.5-UnitTestsCoverage-Debug.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-23 01:06:59",
+    "date": "2020-07-23 01:07:09",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,10 +97,10 @@ performance_test_count: 0
     "pull_request_base_repository": "",
     "pull_request_base_ref": "",
     "device_id": "x86_64-Linux-Ubuntu-18.04-gcc-7.5-UnitTestsCoverage-Debug",
-    "pending": true,
+    "pending": false,
     "analyze_only": false,
-    "build_time": null,
-    "test_time": null,
+    "build_time": 2.975903381,
+    "test_time": 1.0024053,
     "package_time": null,
     "install_time": null,
     "results_repository": "NREL/EnergyPlusBuildResults",
@@ -113,7 +115,7 @@ performance_test_count: 0
     "coverage_total_lines": 0,
     "coverage_functions": 0,
     "coverage_total_functions": 0,
-    "coverage_url": null,
+    "coverage_url": "http://energyplus.s3-website-us-east-1.amazonaws.com/coverage/2020-07-22-EnergyPlus-8e614b375a-x86_64-gcc-7.5UTCD\n",
     "asset_url": null,
     "performance_total_time": null,
     "performance_test_count": 0
