--- a/_posts/WT/2020-07-26-EnergyPlus-8c335802af3688a72ef5561eddc427df2f4b58cf-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/WT/2020-07-26-EnergyPlus-8c335802af3688a72ef5561eddc427df2f4b58cf-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-8c335802af3688a72ef5561eddc427df2f4b58cf-PR8141-x86_64-Linux-U
 permalink: EnergyPlus-8c335802af3688a72ef5561eddc427df2f4b58cf-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-07-26 22:21:55'
+date: '2020-07-26 22:27:41'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '8141'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 343.201216453
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-8c335802af3688a72ef5561eddc427df2f4b58cf-PR8141-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-26 22:21:55",
+    "date": "2020-07-26 22:27:41",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 343.201216453,
     "test_time": null,
     "package_time": null,
     "install_time": null,
