--- a/_posts/A-7957-AII-8030/2020-07-27-EnergyPlus-88641851901a0a24e34098d696343fff7bd95d74-PR8143-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/A-7957-AII-8030/2020-07-27-EnergyPlus-88641851901a0a24e34098d696343fff7bd95d74-PR8143-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-88641851901a0a24e34098d696343fff7bd95d74-PR8143-x86_64-Linux-U
 permalink: EnergyPlus-88641851901a0a24e34098d696343fff7bd95d74-PR8143-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-07-27 15:38:55'
+date: '2020-07-27 15:46:09'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '8143'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 431.265574854
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-88641851901a0a24e34098d696343fff7bd95d74-PR8143-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-27 15:38:55",
+    "date": "2020-07-27 15:46:09",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 431.265574854,
     "test_time": null,
     "package_time": null,
     "install_time": null,
