--- a/_posts/DPPT/2020-07-27-EnergyPlus-c67ad3f649b00c4cc6eb0e9871b386224172d9e6-PR8121-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
+++ b/_posts/DPPT/2020-07-27-EnergyPlus-c67ad3f649b00c4cc6eb0e9871b386224172d9e6-PR8121-x86_64-Linux-Ubuntu-18.04-cppcheck-results.html
@@ -3,7 +3,7 @@ title: EnergyPlus-c67ad3f649b00c4cc6eb0e9871b386224172d9e6-PR8121-x86_64-Linux-U
 permalink: EnergyPlus-c67ad3f649b00c4cc6eb0e9871b386224172d9e6-PR8121-x86_64-Linux-Ubuntu-18.04-cppcheck.html
 tags: data
 layout: ci_results
-date: '2020-07-27 16:59:05'
+date: '2020-07-27 17:07:10'
 unhandled_failure: false
 build_error_count: 0
 build_warning_count: 0
@@ -29,9 +29,9 @@ pull_request_issue_id: '8121'
 pull_request_base_repository: NREL/EnergyPlus
 pull_request_base_ref: develop
 device_id: x86_64-Linux-Ubuntu-18.04-cppcheck
-pending: true
+pending: false
 analyze_only: true
-build_time: 
+build_time: 481.723743299
 test_time: 
 package_time: 
 install_time: 
@@ -69,7 +69,7 @@ performance_test_count: 0
     "permalink": "EnergyPlus-c67ad3f649b00c4cc6eb0e9871b386224172d9e6-PR8121-x86_64-Linux-Ubuntu-18.04-cppcheck.html",
     "tags": "data",
     "layout": "ci_results",
-    "date": "2020-07-27 16:59:05",
+    "date": "2020-07-27 17:07:10",
     "unhandled_failure": false,
     "build_error_count": 0,
     "build_warning_count": 0,
@@ -95,9 +95,9 @@ performance_test_count: 0
     "pull_request_base_repository": "NREL/EnergyPlus",
     "pull_request_base_ref": "develop",
     "device_id": "x86_64-Linux-Ubuntu-18.04-cppcheck",
-    "pending": true,
+    "pending": false,
     "analyze_only": true,
-    "build_time": null,
+    "build_time": 481.723743299,
     "test_time": null,
     "package_time": null,
     "install_time": null,
